     New: gate pins #2/4/6/8 are now set whenever the velocity is >100.
     This way the pins can be used as an accent trigger

   o V4+ AOUT: support for AOUT channel calibration.
     In the CV configuration menu, turn GP ENC #7 until 0V/1V/2V/.../Max will be visible.
     Calibrate the offset of the target value with ENC #8.
     Each V has a dedicated calibration value which can be configured this way, the output will be interpolated accordingly.
     Note that with exiting the CV configuration menu the calibration values are stored on SD Card in the MBSEQ_GC.V4 file
     (-> CV_Cali <cv-counting-from-0>).
     You could backup/set/restore the values from there if required.
     To reset all calibration values: delete all CV_Cali items in MBSEQ_GC.V4, store the file and enter "reset" in MIOS terminal.

   o Bugfix for permanently cleared notes if live recording is used after previous step recording

   o ProgramChange Layer: steps now disabled by default when the track is cleared

   o Whenever a track or parameter layer is unmuted, it will be automatically selected
     This option can now be disabled in the OPTIONS page (item 9/29)

   o new terminal command "lcd" allows to display a temporary message from on LCD from
     an external device via SysEx

   o encoder buttons can now be assigned in the MBSEQ_HW.V4 file (currently hardcoded to FAST function)

   o STM32F4 board: orange LED shows SD Card available, red LED any received MIDI IN, blue LED any transmitted MIDI OUT

   o experimental (might be optional in future): show measure and pattern step position in main screen


MIDIboxSEQ V4.094b
~~~~~~~~~~~~~~~~~~

   o fixed LED handling for common frontpanels (e.g. MUTE LED stayed active regardless of selected view)


MIDIboxSEQ V4.094
~~~~~~~~~~~~~~~~~

   o support for Antilog Frontpanel.
     The appr. HW configuration file can be found under hwcfg/antilog/MBSEQ_HW.V4

   o enhanced COPY/PASTE/CLEAR functions for following pages: